<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_movie_detail_movie_banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            app:layout_constraintBottom_toTopOf="@id/guideline_movie_detail_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_banner_starting"
            android:elevation="0dp"
            android:padding="@dimen/app_padding"
            app:layout_constraintBottom_toTopOf="@id/guideline_movie_detail_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_movie_detail_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_movie_detail_movie_avatar"
            android:layout_width="@dimen/movie_avatar_width_size"
            android:layout_height="@dimen/movie_avatar_height_size"
            android:layout_marginStart="@dimen/regular_margin"
            app:cardCornerRadius="@dimen/regular_radius_400"
            app:layout_constraintBottom_toBottomOf="@id/guideline_movie_detail_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_movie_detail_guideline">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview_movie_detail_movie_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_movie_detail_movie_name"
            style="@style/WhiteText.Bold.175"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginBottom="@dimen/regular_margin_150"
            android:text="Deadpool 3"
            app:layout_constraintBottom_toTopOf="@id/guideline_movie_detail_guideline"
            app:layout_constraintStart_toEndOf="@id/card_view_movie_detail_movie_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_movie_detail_movie_category"
            style="@style/WhiteText.Italic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Action"
            app:layout_constraintStart_toStartOf="@id/textview_movie_detail_movie_name"
            app:layout_constraintTop_toBottomOf="@id/textview_movie_detail_movie_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_movie_detail_add_my_list_button"
            style="@style/WhiteText.Normal.75"
            android:layout_width="@dimen/regular_button_width_size"
            android:layout_height="@dimen/regular_button_height_size"
            android:layout_marginTop="@dimen/regular_margin"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_baseline_add"
            android:drawableTint="@color/white"
            android:text="@string/my_list_button"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/button_movie_detail_rate_button"
            app:layout_constraintStart_toEndOf="@id/card_view_movie_detail_movie_avatar"
            app:layout_constraintTop_toBottomOf="@id/guideline_movie_detail_guideline" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_movie_detail_rate_button"
            style="@style/WhiteText.Normal.75"
            android:layout_width="@dimen/regular_button_width_size"
            android:layout_height="@dimen/regular_button_height_size"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_baseline_star_rate"
            android:drawableTint="@color/white"
            android:text="@string/rate_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/button_movie_detail_add_my_list_button"
            app:layout_constraintEnd_toStartOf="@id/button_movie_detail_share_button"
            app:layout_constraintStart_toEndOf="@id/button_movie_detail_add_my_list_button"
            app:layout_constraintTop_toTopOf="@id/button_movie_detail_add_my_list_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_movie_detail_share_button"
            style="@style/WhiteText.Normal.75"
            android:layout_width="@dimen/regular_button_width_size"
            android:layout_height="@dimen/regular_button_height_size"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_baseline_share"
            android:drawableTint="@color/white"
            android:text="@string/share_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/button_movie_detail_rate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_movie_detail_rate_button"
            app:layout_constraintTop_toTopOf="@id/button_movie_detail_rate_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_margin"
            android:padding="@dimen/app_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_movie_detail_movie_avatar">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_movie_detail_watch_button"
                style="@style/WhiteText.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_big_watch_button"
                android:text="@string/watch_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_movie_detail_movie_over_view"
                style="@style/WhiteText.Bold.150"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_margin_150"
                android:text="@string/overview"
                app:layout_constraintStart_toStartOf="@id/button_movie_detail_watch_button"
                app:layout_constraintTop_toBottomOf="@id/button_movie_detail_watch_button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_movie_detail_movie_overview"
                style="@style/WhiteText.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_margin_50"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi ipsum faucibus vitae aliquet. Integer enim neque volutpat ac tincidunt vitae semper quis. Amet venenatis urna cursus eget nunc. Porta non pulvinar neque laoreet suspendisse interdum. Faucibus scelerisque eleifend donec pretium vulputate sapien. Massa tempor nec feugiat nisl pretium fusce id velit. Ut enim blandit volutpat maecenas volutpat blandit. Purus semper eget duis at tellus at. Vel facilisis volutpat est velit."
                android:textAlignment="gravity"
                android:textColor="@color/white_80"
                app:layout_constraintStart_toStartOf="@id/button_movie_detail_watch_button"
                app:layout_constraintTop_toBottomOf="@id/textview_movie_detail_movie_over_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_movie_detail_production_companies"
                style="@style/WhiteText.Bold.150"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_margin_150"
                android:text="Production Companies"
                app:layout_constraintStart_toStartOf="@id/textview_movie_detail_movie_overview"
                app:layout_constraintTop_toBottomOf="@id/textview_movie_detail_movie_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_movie_detail_production_companies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_margin_50"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/textview_movie_detail_movie_overview"
                app:layout_constraintStart_toStartOf="@id/textview_movie_detail_movie_overview"
                app:layout_constraintTop_toBottomOf="@id/textview_movie_detail_production_companies"
                tools:listitem="@layout/item_production_company" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_movie_detail_comments"
                style="@style/WhiteText.Bold.150"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_margin_150"
                android:text="Comments"
                app:layout_constraintStart_toStartOf="@id/recyclerview_movie_detail_production_companies"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_movie_detail_production_companies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_movie_detail_user_comments"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/regular_margin_50"
                app:layout_constraintBottom_toTopOf="@id/circle_imageview_movie_detail_user_avatar"
                app:layout_constraintStart_toStartOf="@id/textview_movie_detail_comments"
                app:layout_constraintTop_toBottomOf="@id/textview_movie_detail_comments"
                tools:listitem="@layout/item_user_comment" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_imageview_movie_detail_user_avatar"
                android:layout_width="@dimen/user_avatar_width_size"
                android:layout_height="@dimen/user_avatar_height_size"
                android:layout_marginStart="@dimen/app_padding_50"
                android:layout_marginTop="@dimen/regular_margin_50"
                android:src="@drawable/starting"
                app:layout_constraintStart_toStartOf="@id/recyclerview_movie_detail_user_comments"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_movie_detail_user_comments" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_movie_detail_user_comment"
                style="@style/WhiteText.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/regular_margin_50"
                android:hint="Write your comment"
                app:layout_constraintBottom_toBottomOf="@id/circle_imageview_movie_detail_user_avatar"
                android:textAlignment="textStart"
                android:textColorHint="@color/white_80"
                app:layout_constraintEnd_toStartOf="@id/imageview_movie_detail_send"
                app:layout_constraintStart_toEndOf="@id/circle_imageview_movie_detail_user_avatar"
                app:layout_constraintTop_toTopOf="@id/circle_imageview_movie_detail_user_avatar" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview_movie_detail_send"
                android:layout_width="@dimen/regular_icon_size"
                android:layout_height="@dimen/regular_icon_size"
                android:layout_marginStart="@dimen/regular_margin_50"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/edittext_movie_detail_user_comment"
                android:src="@drawable/ic_baseline_send"
                app:layout_constraintEnd_toEndOf="@id/recyclerview_movie_detail_user_comments"
                app:layout_constraintStart_toEndOf="@id/edittext_movie_detail_user_comment"
                app:layout_constraintTop_toTopOf="@id/edittext_movie_detail_user_comment" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>